Fix focus collapse

--- a/src/styles/sass/partials/_form.scss
+++ b/src/styles/sass/partials/_form.scss
@@ -38,7 +38,8 @@
     .showSecrets {
       background: transparent;
       color: $white;
-      width: 70%;
+      margin: 8px 0;
+      width: 57%;
     }
   }
 }
